--- a/public/testEditor.css
+++ b/public/testEditor.css
@@ -82,3 +82,42 @@
 	width: 90%;
 	height: 15%;
 }
+
+.columns {
+	display: flex;
+	flex-direction: row;
+}
+
+.rows {
+	display: flex;
+	flex-direction: column;
+}
+
+#questionsPart1 {
+	width: 50%;
+	height: 25vh;
+}
+
+#questionsPart1 textarea {
+	height: 100%;
+}
+
+#questionsPart2 {
+	width: 40%;
+	height: 25vh;
+	margin-left: 5%;
+}
+
+#questionsPart2 label {
+	cursor: pointer;
+}
+
+.highlight-yellow {
+	background-color: yellow;
+}
+
+.correctAnswer {
+	color:white;
+	font-weight: bold;
+	background-color: green;
+}
