Question Images (with text)

--- a/public/testEditor.css
+++ b/public/testEditor.css
@@ -110,9 +110,9 @@
 	margin-left: 5%;
 }
 
-#questionsPart2 label {
+/*#questionsPart2 label {
 	cursor: pointer;
-}
+}*/
 
 .highlight-yellow {
 	background-color: yellow;
