--- a/public/testEditor.css
+++ b/public/testEditor.css
@@ -110,6 +110,11 @@
 	margin-left: 5%;
 }
 
+#questionsPart2 div label {
+	padding-right: 100px;
+	margin-right: 15px;
+}
+
 /*#questionsPart2 label {
 	cursor: pointer;
 }*/
@@ -188,4 +193,13 @@
 
 .questionText {
 	margin-bottom: 1em;
+}
+
+input[type='file'] {
+  color: transparent;
+}
+
+.box {
+	border-style: solid;
+	border-width: 1px;
 }
