--- a/public/testEditor.css
+++ b/public/testEditor.css
@@ -6,16 +6,36 @@
 	background-color: var(--mainColor)
 }
 
+#firstHalf {
+	height: 40vh;
+}
+
+#secondHalf {
+	border-top-style: solid;
+	border-top-width: 2px;
+	border-top-color: black;
+	height: 60vh;
+	display: flex;
+	flex-direction: row;
+}
+
 .finalProductDiv {
 	background-color: white;
 	border-style: solid;
 	border-width: 1px;
 	border-color: black;
 	margin-right: 5vw;
-	width: 10vw;
+	width: 45vw;
 	height: 80%;
 	margin-top: calc(.10 * 70vh);
 	padding: 1em;
+}
+
+.finalProductDiv:first-child {
+	margin-left: 5vw;
+	width: 10vw;
+	text-align: center;
+	overflow: auto;
 }
 
 .finalProductDiv:last-child {
@@ -24,65 +44,8 @@
 	overflow: auto;
 }
 
-.finalProductDiv:first-child {
-	margin-left: 5vw;
-	text-align: center;
-	overflow: auto;
-}
-
 .bold {
 	font-weight: bold;
-}
-
-#firstHalf {
-	width: 20vw;
-}
-
-#secondHalf {
-	width: 80vw;
-}
-
-#form {
-	display: flex;
-	flex-direction: row;
-	height: 30vh;
-}
-
-#finalProduct {
-	border-top-style: solid;
-	border-top-width: 2px;
-	border-top-color: black;
-	height: 68vh;
-	display: flex;
-	flex-direction: row;
-}
-
-#pText {
-	width: 45vw;
-	overflow: auto;
-	line-height: 1.5;
-}
-
-.highlight:hover {
-	background-color: yellow;
-	cursor: pointer;
-}
-
-.spotlight {
-	background-color: yellow;
-}
-
-#questions {
-	width: 20vw;
-}
-
-#passageText {
-	width: 90%;
-	height: 65%;
-}
-
-#passageTitle {
-	width: 90%;
 }
 
 .columns {
@@ -95,67 +58,29 @@
 	flex-direction: column;
 }
 
-#questionsPart1 {
-	width: 50%;
-	height: 25vh;
-}
-
-#questionsPart1 textarea {
+.centerSpread {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
 	height: 100%;
+	width: 100%;
 }
 
-#questionsPart2 {
-	width: 40%;
-	height: 25vh;
-	margin-left: 5%;
+.centerSpread button {
+	height: 25%;
+	width: 15%;
 }
 
-#questionsPart2 div label {
-	padding-right: 100px;
-	margin-right: 15px;
+.mainLabel {
+	margin-top: 5px;
+	height: 1.5em;
+	margin-right: 10px;
 }
 
-/*#questionsPart2 label {
-	cursor: pointer;
-}*/
-
-.highlight-yellow {
-	background-color: yellow;
-}
-
-.correctAnswer {
-	color:white;
-	font-weight: bold;
-	background-color: green;
-}
-
-.problem {
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 10px;
-	background-color: rgb(230, 231, 232);
-	margin: 2px;
-	cursor: pointer;
-}
-
-.answerText {
-	margin: 0em 0em 0.5em 2em;
-}
-
-.stage1 {
-	background-color: rgb(230, 231, 232);
-}
-
-.stage2 {
-	background-color: yellowgreen;
-}
-
-.stage3 {
-	background-color: green;
-}
-
-#secondHalf .columns .rows:first-child {
-	width: 80%;
+.mainInput {
+	margin-top: 5px;
+	height: 1.5em;
 }
 
 #answers .rows input{
@@ -171,35 +96,30 @@
 	margin-left: 20px;
 }
 
-#secondHalf #answers .rows {
-	width: inherit;
+#englishPassage {
+	margin-left: 10px;
 }
 
-.imagePopup {
-	position: absolute;
-	background-color: rgb(230, 230, 230);
-	border-style: solid;
-	border-width: 2px;
+.title {
+	height: 5vh;
+	width: 50vw;
 }
 
-.imagePopup div:hover {
-	background-color: rgb(180, 180, 180);
-	cursor:pointer;
+.textArea {
+	height: 20vh;
+	width: 50vw;
+}
+
+.reference {
+	height: 5vh;
+	width: 50vw;
+}
+
+#pText {
+	overflow: auto;
+	line-height: 1.5;
 }
 
 .hidden {
 	display: none;
-}
-
-.questionText {
-	margin-bottom: 1em;
-}
-
-input[type='file'] {
-  color: transparent;
-}
-
-.box {
-	border-style: solid;
-	border-width: 1px;
 }
