--- a/public/testEditor.css
+++ b/public/testEditor.css
@@ -96,6 +96,19 @@
 	margin-left: 20px;
 }
 
+#scaledScores .rows input{
+	height: 20px;
+	width: 50px;
+	margin-top: 2px;
+	margin-left: 20px;
+}
+
+#scaledScores .rows label{
+	height: 20px;
+	margin-top: 2px;
+	margin-left: 20px;
+}
+
 .sectionPassage {
 	margin-left: 10px;
 }
@@ -123,6 +136,65 @@
 #pText {
 	overflow: auto;
 	line-height: 1.5;
+}
+
+.border-none {
+	border-width: 0px 0px 0px 0px;
+}
+
+table {
+	border-collapse: collapse;
+	border-style: solid;
+	border-color: black;
+	border-width: 2px;
+}
+
+table th {
+	text-align: center;
+	background-color: #3a6070;
+	color: #FFF;
+	padding: 4px 8px 4px 8px;
+	border: 2px solid black;
+}
+
+table td {
+	text-align: center;
+	border: 1px solid #e3e3e3;
+	padding: 4px 8px;
+}
+
+/*table td:first-child {
+	border-style: solid;
+	border-color: black;
+	border-width: 0px 2px 0px 0px;
+}*/
+
+table tr:nth-child(odd) td {
+	background-color: #e7edf0;
+}
+
+.border-top {
+	border-style: solid;
+	border-width: 2px 0px 0px 0px;
+	border-color: black;
+}
+
+.border-right {
+	border-style: solid;
+	border-width: 0px 2px 0px 0px;
+	border-color: black;
+}
+
+.border-bottom {
+	border-style: solid;
+	border-width: 0px 0px 2px 0px;
+	border-color: black;
+}
+
+.border-left {
+	border-style: solid;
+	border-width: 0px 0px 0px 2px;
+	border-color: black;
 }
 
 .hidden {
