--- a/public/payment-link.css
+++ b/public/payment-link.css
@@ -413,7 +413,27 @@ main {
 }
 
 .save-wrapper {
-  display: none;
+  display: block;
+}
+
+.save-card.spinner::after {
+  box-sizing: border-box;
+  content: '';
+  display: inline-block;
+  margin-left: 1em;
+  position: relative;
+  bottom: 0;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top: 2px solid white;
+  animation: spin 500ms linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 .payments .make-payment label {
@@ -487,7 +507,7 @@ main {
 }
 
 .encrypted {
-  color: var(--color-secondary);
+  color: #A3A3A3;
   text-align: center;
   margin-top: 1em;
 }
@@ -581,10 +601,16 @@ main {
   display: flex;
   justify-content: flex-end;
   text-align: right;
+  border: 2px solid var(--color-tertiary);
 }
 
 .total-wrapper h2{
-  margin-right: 1em;
+  margin: 0em 1em 0em 0em;
+}
+
+#expiration-message {
+  padding: 1em 0em 0em;
+  color: #A3A3A3;
 }
 
 #payments-list {
