--- a/public/why.css
+++ b/public/why.css
@@ -40,6 +40,12 @@ body {
 
 a {
   cursor: pointer;
+  text-decoration: none;
+  color: var(--color-accent-4-deep);
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 img {
@@ -348,7 +354,7 @@ nav a:hover {
   background-position: left;
   background-size: 525%;
   background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light), var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light));
-  animation: gradient-background 60s linear infinite;
+  animation: gradient-background 60s ease-in-out infinite alternate;
 }
 
 @keyframes gradient-background {
@@ -361,7 +367,7 @@ nav a:hover {
 }
 
 .hero .intro {
-  padding: 2em 10em 2em 2em;
+  padding: 2em;
   background-color: var(--color-primary);
   border-radius: 1em;
   box-shadow: 12px 12px 20px rgba(0, 0, 0, 0.36);
@@ -447,6 +453,10 @@ nav a:hover {
 }
 
 @media screen and (min-width: 800px) {
+  .hero .intro {
+    padding: 2em 10em 2em 2em;
+  }
+  
   .content {
     padding: 5em 15em;
   }
@@ -505,7 +515,7 @@ nav a:hover {
   background-color: #68D3A3;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 45vh;
+  height: 25vh;
 }
 
 /* footer */
