--- a/public/enroll.css
+++ b/public/enroll.css
@@ -153,6 +153,21 @@ header {
   display: block;
 }
 
+.phone a {
+  display: flex;
+  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  color: black;
+  padding: .5em 1.5em;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone a svg {
+  margin-right: .5em;
+}
+
 /* changed this from the tutorial video to
    allow it to gain focus, making it tabbable */
 .nav-toggle {
@@ -170,7 +185,7 @@ header {
   top: 0;
   right: 0;
   margin-right: 1em;
-  height: 100%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
@@ -260,10 +275,10 @@ nav a:hover {
   .nav-toggle-label {
     display: none;
   }
-
+  
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
+    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
     border-radius: 0px 0px 2rem 2rem;
     position: fixed;
   }
@@ -275,6 +290,21 @@ nav a:hover {
   
   .logo {
     grid-column: 2 / 3;
+  }
+
+  .phone {
+    grid-column: 4 / 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 1em;
+  }
+  
+  .phone a {
+    border-radius: .5em;
+    width: auto;
+    height: auto;
   }
   
   nav {
@@ -360,6 +390,15 @@ nav a:hover {
   bottom: 0;
   left: 0;
   background-color: rgba(255, 255, 255, 0.85);
+}
+
+.contact .phone {
+  justify-content: center;
+}
+
+.contact .phone a {
+  width: 100%;
+  border-radius: .5em;
 }
 
 .contact-form {
@@ -471,6 +510,11 @@ nav a:hover {
 
   .contact__intro {
     padding: 2em 0em 1em;
+  }
+
+  .contact .phone {
+    justify-content: center;
+    padding: 0em 3em;
   }
 
   .contact-form {
