--- a/public/index.css
+++ b/public/index.css
@@ -153,6 +153,21 @@ header {
   display: block;
 }
 
+.phone a {
+  display: flex;
+  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  color: black;
+  padding: .5em 1.5em;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone a svg {
+  margin-right: .5em;
+}
+
 /* changed this from the tutorial video to
    allow it to gain focus, making it tabbable */
 .nav-toggle {
@@ -170,7 +185,7 @@ header {
   top: 0;
   right: 0;
   margin-right: 1em;
-  height: 100%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
@@ -275,7 +290,7 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
+    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
     border-radius: 0px 0px 2rem 2rem;
     position: fixed;
   }
@@ -292,6 +307,21 @@ nav a:hover {
   
   .logo {
     grid-column: 2 / 3;
+  }
+
+  .phone {
+    grid-column: 4 / 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 1em;
+  }
+  
+  .phone a {
+    border-radius: .5em;
+    width: auto;
+    height: auto;
   }
   
   nav {
@@ -380,6 +410,16 @@ nav a:hover {
   padding: 2em;
   border-radius: 1em;
   color: var(--color-tertiary);
+}
+
+.hero__intro .hero__button {
+  width: 100%;
+  text-align: center;
+  background-color: var(--color-accent-4-light);
+  color: white;
+  font-size: 1.5em;
+  border-radius: .5em;
+  padding: .5em 1.5em;
 }
 
 .hero__background {
@@ -498,13 +538,6 @@ nav a:hover {
     /* background: linear-gradient(45deg, var(--color-accent-4-light), var(--color-accent-5-light));;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; */
-  }
-
-  .hero__intro .enroll {
-    width: 100%;
-    text-align: center;
-    /* background-color: var(--color-primary);
-    background-image: none; */
   }
 
   .hero__body {
@@ -1254,6 +1287,15 @@ nav a:hover {
   background-color: rgba(255, 255, 255, 0.85);
 }
 
+.contact .phone {
+  justify-content: center;
+}
+
+.contact .phone a {
+  width: 100%;
+  border-radius: .5em;
+}
+
 .contact-form {
   background-color: var(--color-primary);
   padding: 1em;
@@ -1356,6 +1398,11 @@ nav a:hover {
     max-width: 30%;
     min-width: 200px;
     padding-right: 5em;
+  }
+
+  .contact .phone {
+    justify-content: center;
+    padding: 0em 3em;
   }
 
   .contact-form {
