--- a/public/pricing.css
+++ b/public/pricing.css
@@ -158,11 +158,12 @@ header {
   background: var(--nav-background);
   color: var(--nav-color);
   text-align: center;
+  position: sticky;
+  top: 0px;
   z-index: 999;
   width: 100%;
   box-shadow: #00000041 0em .5em 20px;
   transition: background-color 200ms ease-in;
-  position: relative;
 }
 
 header li {
@@ -177,6 +178,21 @@ header li::before {
   width: 5em;
   padding: 1em 0px;
   display: block;
+}
+
+.phone a {
+  display: flex;
+  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  color: black;
+  padding: .5em 1.5em;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.phone a svg {
+  margin-right: .5em;
 }
 
 /* changed this from the tutorial video to
@@ -196,7 +212,7 @@ header li::before {
   top: 0;
   right: 0;
   margin-right: 1em;
-  height: 100%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
@@ -293,12 +309,28 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
+    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
     border-radius: 0px 0px 2rem 2rem;
+    position: fixed;
   }
   
   .logo {
     grid-column: 2 / 3;
+  }
+
+  .phone {
+    grid-column: 4 / 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 1em;
+  }
+  
+  .phone a {
+    border-radius: .5em;
+    width: auto;
+    height: auto;
   }
   
   nav {
