--- a/public/why.css
+++ b/public/why.css
@@ -96,7 +96,7 @@ h5 {
   font-weight: 300;
 }
 
-p, li {
+p, li:not(nav li) {
   font-size: 1.5rem;
   color: rgb(80, 80, 80);
   line-height: 1.5em;
@@ -132,7 +132,7 @@ p {
     font-weight: 300;
   }
 
-  p, li {
+  p, li:not(nav li) {
     font-size: 1.5rem;
     font-weight: 100;
   }
@@ -152,10 +152,33 @@ header {
   transition: background-color 200ms ease-in;
 }
 
+header li {
+  margin: 0px;
+}
+
+header li::before {
+  content: none;
+}
+
 .logo {
   width: 5em;
   padding: 1em 0px;
   display: block;
+}
+
+.phone a {
+  display: flex;
+  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  color: black;
+  padding: .5em 1.5em;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.phone a svg {
+  margin-right: .5em;
 }
 
 /* changed this from the tutorial video to
@@ -175,7 +198,7 @@ header {
   top: 0;
   right: 0;
   margin-right: 1em;
-  height: 100%;
+  height: 50%;
   display: flex;
   align-items: center;
 }
@@ -242,22 +265,14 @@ nav .enroll {
 }
 
 .enroll {
-  padding: .5em 1.8em;
+  padding: .7em 1.8em;
   border-radius: .4em;
-  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
   font-weight: bold;
-  font-size: 1.25em;
-  color: black;
+  font-size: 1em;
+  color: inherit;
   text-decoration: none;
   cursor: pointer;
-  background-size: 200%;
-  background-position: left;
-  transition: background-position 200ms ease-in;
-}
-
-.enroll:hover {
-  color: inherit;
-  background-position: right;
 }
 
 nav a:hover {
@@ -280,18 +295,28 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
+    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
     border-radius: 0px 0px 2rem 2rem;
     position: fixed;
-  }
-
-  header.nav-start {
-    background-color: var(--color-primary);
-    box-shadow: #00000041 0em .5em 20px;
   }
   
   .logo {
     grid-column: 2 / 3;
+  }
+
+  .phone {
+    grid-column: 4 / 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-left: 1em;
+  }
+  
+  .phone a {
+    border-radius: .5em;
+    width: auto;
+    height: auto;
   }
   
   nav {
